# Linux_Cpp_embarque_IVVQ

./: README.md
Tracker_cryptomonnaies_code/: CMakeLists.txt  Trackercrypto_arm64  conversion_2023-09-15_10-51-46.json  conversion_2023-09-18_13-42-57.json  main.cpp
Tracker_cryptomonnaies_code/buildroot_graphs/: file-size-stats.csv  graph-depends.dot  package-size-stats.csv
Tracker_cryptomonnaies_code/exemple_output_/: conversion_0.json  conversion_2023-09-20_11-31-01_1.json  conversion_2023-09-20_14-33-16_2.json  conversion_2023-09-20_15-41-52_5.json  conversion_2023-09-20_15-42-33_0.json  conversion_2023-09-20_15-46-44_0.json  conversion_2023-09-20_15-47-49_0.json  conversion_2023-09-20_15-55-51_7.json  conversion_2023-09-20_16-24-36_8.json  conversion_2023-09-20_16-43-41_9.json  conversion_2023-09-20_16-47-42_0.json  conversion_2023-09-20_16-51-16_1.json  conversion_3.json  conversion_4.json  conversion_6.json  graph_suivi_BTC_en_fct_de_USD.ps  graph_suivi_XMR_en_fct_de_USD.ps
buildroot_qemu_config/initialisation/: .config  file-size-stats.csv  graph-depends.dot  package-size-stats.csv
code pour editor Cpp/: TextEditor_.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacebox.cpp  replacebox.h  searchbox.cpp  searchbox.h
code pour histogramme et camenbert/: CMakeLists.txt  main.c
verifier_segmentation_pour_string_legend/: CMakeLists.txt  main.c
